--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,7 @@ main {
 
 #main-container {
     background-color: #ffffff;
+    font-family: 'Quattrocento Sans', sans-serif;
     width: 960px;
     margin: auto;
     position: relative;
@@ -63,7 +64,6 @@ main {
 
 section p {
     line-height: 1.5em;
-    font-family: 'Quattrocento Sans', sans-serif;
     padding: 10px;
 }
 
@@ -74,10 +74,20 @@ h2 {
     padding: 30px;
 }
 
+h3 {
+    font-size: 20px;
+}
+
 hr {
     border-color: #666666;
     width: 90%;
     border-width: .5px;
+}
+
+.main-content {
+    width: 90%;
+    margin: auto;
+    margin-top: 20px;
 }
 
 .clearfix::after {
@@ -88,7 +98,8 @@ hr {
 
 #index-image {
     float: left;
-    margin: 20px;
+    margin-right: 20px;
+    margin-bottom: 3px;
 }
 
 footer {
