--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,11 +66,12 @@ section p {
     padding: 10px;
 }
 
-h2 {
+#page-title {
     color: #4aaaa5;
     font-size: 30px;
-    width: 130px;
-    padding: 30px;
+    width: 90%;
+    margin: auto;
+    padding: 30px 0;
 }
 
 h3 {
@@ -125,6 +126,9 @@ footer p {
     margin: auto;
     position: relative;
     top: 20px;
+}
+
+.project-outer-container {
     text-align: center;
 }
 
@@ -225,7 +229,7 @@ input[type=submit] {
         margin-left: 40px;
     }
 
-    h2 {
+    #page-title {
         width: 200px;
     }
 
