--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,7 +74,7 @@ main {
     padding: 30px 0;
 }
 
-h3 {
+#index-content h3 {
     font-size: 20px;
 }
 
@@ -298,6 +298,10 @@ input[type=submit] {
             display: block;
             margin: auto;
             width: 70%;
+        }
+
+        #index-content {
+            margin-top: 20px;
         }
 
         #index-content h3 {
